--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -248,9 +248,7 @@
 <h3><span id="Zastaral.C3.A9_n.C3.A1stroje"></span><span class="mw-headline" id="Zastaral&eacute;_n&aacute;stroje">Zastaral&eacute; n&aacute;stroje</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Clone.svg&amp;filetimestamp=20240101115259&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Clone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Clone.html" title="Sketcher Clone">Klonov&aacute;n&iacute;</a>: Klonuje prvek skic&aacute;&#345;e. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CloseShape.svg&amp;filetimestamp=20170323164507&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CloseShape.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CloseShape.html" title="Sketcher CloseShape">Uzav&#345;&iacute;t tvar</a>: Vytvo&#345;&iacute; uzav&#345;en&yacute; tvar pomoc&iacute; vazby shody koncov&yacute;ch bod&#367;. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">0.21 and above</span>.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePointFillet.svg&amp;filetimestamp=20240101090747&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePointFillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePointFillet.html" title="Sketcher CreatePointFillet">Corner-preserving fillet</a>: Creates a fillet between two non-parallel lines while preserving their corner point. Not available in <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePointFillet.svg&amp;filetimestamp=20240101090747&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePointFillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePointFillet.html" title="Sketcher CreatePointFillet">Zaoblen&iacute; se zachov&aacute;n&iacute;m rohu</a>: Vytvo&#345;&iacute; zaoblen&iacute; mezi dv&#283;ma neparaleln&iacute;mi p&#345;&iacute;mkami p&#345;i zachov&aacute;n&iacute; jejich rohov&eacute;ho bodu. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConnectLines.svg&amp;filetimestamp=20170323164544&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConnectLines.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConnectLines.html" title="Sketcher ConnectLines">Connect edges</a>: Connect Sketcher elements by applying coincident constraints to endpoints. Not available in <span style="font-size:small;color:green;">0.21 and above</span>.</li></ul>
 </div>
@@ -554,13 +552,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118140253
+Cached time: 20260118140417
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.480 seconds
-Real time usage: 0.715 seconds
-Preprocessor visited node count: 1429/1000000
+CPU time usage: 0.472 seconds
+Real time usage: 0.743 seconds
+Preprocessor visited node count: 1428/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -570,19 +568,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.886      1 -total
- 25.62%   11.498      1 Template:Sketcher_Tools_navi/cs
- 12.25%    5.499      1 Template:Userdocnavi/cs
- 12.06%    5.412      2 Template:Navigation_menu_2
-  9.94%    4.461      2 Template:Docnav
-  7.84%    3.517      1 Template:PropertyView
-  6.49%    2.913     34 Template:Version
-  6.22%    2.792      5 Template:MenuCommand
-  4.99%    2.238      8 Template:VersionPlus
-  4.70%    2.111      6 Template:Caption
+100.00%   47.870      1 -total
+ 22.15%   10.604      1 Template:Sketcher_Tools_navi/cs
+ 13.46%    6.444      2 Template:Navigation_menu_2
+ 11.50%    5.506      1 Template:Userdocnavi/cs
+  9.18%    4.394      2 Template:Docnav
+  8.71%    4.168      8 Template:VersionPlus
+  8.41%    4.025      1 Template:PropertyView
+  7.53%    3.603     34 Template:Version
+  4.22%    2.022      1 Template:TOCright
+  4.13%    1.975      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118140252 and revision id 1740595. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118140417 and revision id 1740597. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
