--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -251,9 +251,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePointFillet.svg&amp;filetimestamp=20240101090747&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePointFillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePointFillet.html" title="Sketcher CreatePointFillet">Zaoblen&iacute; se zachov&aacute;n&iacute;m rohu</a>: Vytvo&#345;&iacute; zaoblen&iacute; mezi dv&#283;ma neparaleln&iacute;mi p&#345;&iacute;mkami p&#345;i zachov&aacute;n&iacute; jejich rohov&eacute;ho bodu. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConnectLines.svg&amp;filetimestamp=20170323164544&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConnectLines.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConnectLines.html" title="Sketcher ConnectLines">Spojit hrany</a>: Propoj&iacute; prvky Sketcheru pomoc&iacute; vazby shody na koncov&yacute;ch bodech. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">0.21 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Copy.svg&amp;filetimestamp=20240101115313&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Copy.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Copy.html" title="Sketcher Copy">Kop&iacute;rovat</a>: Zkop&iacute;ruje prvek Sketcheru. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_External.svg&amp;filetimestamp=20240101091332&amp;.html" class="mw-file-description"><img src="../File/Sketcher_External.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_External.html" title="Sketcher External">External geometry</a>: Projects edges and/or vertices belonging to objects outside the sketch onto the sketch plane. Not available in <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_External.svg&amp;filetimestamp=20240101091332&amp;.html" class="mw-file-description"><img src="../File/Sketcher_External.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_External.html" title="Sketcher External">Extern&iacute; geometriey</a>: Prom&iacute;t&aacute; hrany a/nebo vrcholy pat&#345;&iacute;c&iacute; k objekt&#367;m mimo n&aacute;&#269;rt na rovinu n&aacute;&#269;rtu. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Move.svg&amp;filetimestamp=20240101115349&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Move.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Move.html" title="Sketcher Move">Move</a>: Moves the selected geometry taking as reference the last selected point. Not available in <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
 </div>
@@ -548,13 +546,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118140646
+Cached time: 20260118140747
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.383 seconds
-Real time usage: 0.582 seconds
-Preprocessor visited node count: 1426/1000000
+CPU time usage: 0.521 seconds
+Real time usage: 1.130 seconds
+Preprocessor visited node count: 1425/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -564,19 +562,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.193      1 -total
- 16.87%    8.129      1 Template:Sketcher_Tools_navi/cs
- 14.13%    6.810      1 Template:PropertyView
- 13.05%    6.290     34 Template:Version
-  9.29%    4.475      1 Template:Userdocnavi/cs
-  8.95%    4.313      2 Template:Navigation_menu_2
-  7.29%    3.512     14 Template:KEY
-  6.83%    3.292      1 Template:Variable
-  5.97%    2.877      6 Template:Caption
-  5.71%    2.750      2 Template:Docnav
+100.00%   89.567      1 -total
+ 14.70%   13.167      1 Template:Sketcher_Tools_navi/cs
+ 12.34%   11.051      8 Template:VersionPlus
+ 12.24%   10.962      1 Template:PropertyView
+ 10.19%    9.123     34 Template:Version
+  9.39%    8.412      2 Template:Navigation_menu_2
+  8.03%    7.191      1 Template:Userdocnavi/cs
+  7.19%    6.441     14 Template:KEY
+  6.58%    5.892      6 Template:Caption
+  6.25%    5.602      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118140645 and revision id 1740601. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118140746 and revision id 1740603. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
