--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -253,9 +253,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Copy.svg&amp;filetimestamp=20240101115313&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Copy.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Copy.html" title="Sketcher Copy">Kop&iacute;rovat</a>: Zkop&iacute;ruje prvek Sketcheru. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_External.svg&amp;filetimestamp=20240101091332&amp;.html" class="mw-file-description"><img src="../File/Sketcher_External.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_External.html" title="Sketcher External">Extern&iacute; geometriey</a>: Prom&iacute;t&aacute; hrany a/nebo vrcholy pat&#345;&iacute;c&iacute; k objekt&#367;m mimo n&aacute;&#269;rt na rovinu n&aacute;&#269;rtu. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Move.svg&amp;filetimestamp=20240101115349&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Move.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Move.html" title="Sketcher Move">P&#345;esunout</a>: P&#345;esune vybranou geometrii s ohledem na posledn&iacute; vybran&yacute; bod. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_RectangularArray.svg&amp;filetimestamp=20240101115435&amp;.html" class="mw-file-description"><img src="../File/Sketcher_RectangularArray.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_RectangularArray.html" title="Sketcher RectangularArray">Rectangular array</a>: Creates an array of selected Sketcher elements. Not available in <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_RectangularArray.svg&amp;filetimestamp=20240101115435&amp;.html" class="mw-file-description"><img src="../File/Sketcher_RectangularArray.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_RectangularArray.html" title="Sketcher RectangularArray">Obd&eacute;ln&iacute;kov&eacute; pole</a>: Vytvo&#345;&iacute; pole vybran&yacute;ch prvk&#367; Sketcheru. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Preferences">Preferences</span></h2>
 </div>
@@ -544,13 +542,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118140846
+Cached time: 20260118141006
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.441 seconds
-Real time usage: 1.059 seconds
-Preprocessor visited node count: 1424/1000000
+CPU time usage: 0.509 seconds
+Real time usage: 0.798 seconds
+Preprocessor visited node count: 1423/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -560,19 +558,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  144.395      1 -total
- 34.75%   50.183      1 Template:Sketcher_Tools_navi/cs
- 12.80%   18.483      1 Template:Userdocnavi/cs
- 10.88%   15.716      1 Template:PropertyView
-  9.40%   13.570      2 Template:Navigation_menu_2
-  8.65%   12.494      5 Template:MenuCommand
-  7.94%   11.465      1 Template:Variable
-  6.13%    8.854     34 Template:Version
-  5.55%    8.020     14 Template:KEY
-  3.61%    5.218      8 Template:VersionPlus
+100.00%   41.701      1 -total
+ 19.24%    8.022      1 Template:Sketcher_Tools_navi/cs
+ 13.19%    5.502      2 Template:Navigation_menu_2
+ 12.48%    5.204      1 Template:Userdocnavi/cs
+  8.88%    3.702      1 Template:PropertyView
+  7.90%    3.295     34 Template:Version
+  7.50%    3.129     14 Template:KEY
+  7.30%    3.042      6 Template:Caption
+  7.01%    2.925      5 Template:MenuCommand
+  6.07%    2.532      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118140844 and revision id 1740605. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118141005 and revision id 1740607. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
