--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -258,9 +258,9 @@
 </p>
 <h2><span id="P.C5.99edvolby"></span><span class="mw-headline" id="P&#345;edvolby">P&#345;edvolby</span></h2>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Preferences.html" title="Sketcher Preferences">P&#345;edvolby</a>: P&#345;edvolby pro pracovn&iacute; plochu Sketcher.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Drawing_aids">Drawing aids</span></h2>
-</div>
+<p><span id="Drawing_aids"></span>
+</p>
+<h2><span id="Pom.C5.AFcky_pro_kreslen.C3.AD"></span><span class="mw-headline" id="Pom&#367;cky_pro_kreslen&iacute;">Pom&#367;cky pro kreslen&iacute;</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The Sketcher Workbench has several drawing aids and other features that can help when creating geometry and applying constraints.
 </p>
@@ -540,12 +540,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118141137
+Cached time: 20260118141215
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.496 seconds
-Real time usage: 1.103 seconds
+CPU time usage: 0.451 seconds
+Real time usage: 1.215 seconds
 Preprocessor visited node count: 1422/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
@@ -556,19 +556,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   85.472      1 -total
- 16.35%   13.975      1 Template:Sketcher_Tools_navi/cs
- 12.85%   10.981      2 Template:Docnav
- 12.01%   10.261      1 Template:PropertyView
- 11.69%    9.993      1 Template:Userdocnavi/cs
-  7.62%    6.510      2 Template:Navigation_menu_2
-  6.50%    5.555      6 Template:Caption
-  4.98%    4.259     34 Template:Version
-  4.94%    4.224      1 Template:Variable
-  4.43%    3.783      5 Template:MenuCommand
+100.00%   67.820      1 -total
+ 27.81%   18.864      1 Template:Sketcher_Tools_navi/cs
+ 17.31%   11.739      2 Template:Navigation_menu_2
+ 15.46%   10.488      1 Template:Userdocnavi/cs
+  8.66%    5.874      1 Template:PropertyView
+  7.75%    5.259     34 Template:Version
+  7.39%    5.011      2 Template:Docnav
+  6.79%    4.607      8 Template:VersionPlus
+  5.07%    3.437     14 Template:KEY
+  3.85%    2.613      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118141136 and revision id 1740611. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118141214 and revision id 1740613. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
