--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -261,10 +261,8 @@
 <p><span id="Drawing_aids"></span>
 </p>
 <h2><span id="Pom.C5.AFcky_pro_kreslen.C3.AD"></span><span class="mw-headline" id="Pom&#367;cky_pro_kreslen&iacute;">Pom&#367;cky pro kreslen&iacute;</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The Sketcher Workbench has several drawing aids and other features that can help when creating geometry and applying constraints.
+<p>Pracovn&iacute; plocha Sketcher obsahuje n&#283;kolik pom&#367;cek pro kreslen&iacute; a dal&scaron;&iacute;ch funkc&iacute;, kter&eacute; mohou pomoci p&#345;i vytv&aacute;&#345;en&iacute; geometrie a aplikov&aacute;n&iacute; vazeb.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Continue_modes">Continue modes</span></h3>
 </div>
@@ -540,13 +538,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118141215
+Cached time: 20260118141308
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.451 seconds
-Real time usage: 1.215 seconds
-Preprocessor visited node count: 1422/1000000
+CPU time usage: 0.469 seconds
+Real time usage: 0.927 seconds
+Preprocessor visited node count: 1421/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -556,19 +554,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   67.820      1 -total
- 27.81%   18.864      1 Template:Sketcher_Tools_navi/cs
- 17.31%   11.739      2 Template:Navigation_menu_2
- 15.46%   10.488      1 Template:Userdocnavi/cs
-  8.66%    5.874      1 Template:PropertyView
-  7.75%    5.259     34 Template:Version
-  7.39%    5.011      2 Template:Docnav
-  6.79%    4.607      8 Template:VersionPlus
-  5.07%    3.437     14 Template:KEY
-  3.85%    2.613      1 Template:Variable
+100.00%   37.243      1 -total
+ 26.66%    9.928      1 Template:Sketcher_Tools_navi/cs
+ 14.68%    5.468      2 Template:Navigation_menu_2
+ 13.55%    5.045      1 Template:Userdocnavi/cs
+  8.50%    3.167      1 Template:PropertyView
+  7.34%    2.735      2 Template:Docnav
+  6.93%    2.581      8 Template:VersionPlus
+  5.71%    2.128     14 Template:KEY
+  5.54%    2.062     34 Template:Version
+  5.06%    1.883      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118141214 and revision id 1740613. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118141307 and revision id 1740615. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
