--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -293,9 +293,7 @@
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Ur&#269;en&iacute; st&#345;edov&eacute;ho bodu kruhu s povolen&yacute;mi pozi&#269;n&iacute;mi parametry</p>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_On_view_parameters_dimensional.png&amp;filetimestamp=20240203203400&amp;.html" class="mw-file-description"><img src="../File/Sketcher_On_view_parameters_dimensional.png" decoding="async" width="300" height="250" class="mw-file-element" data-file-width="300" data-file-height="250"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Determining the radius of a circle with the dimensional parameters enabled</p>
-</div>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Ur&#269;en&iacute; polom&#283;ru kruhu s povolen&yacute;mi dimenzion&aacute;ln&iacute;mi parametry</p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>If values are entered and confirmed by pressing <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> or <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Tab</span>, related constraints are added automatically. If two parameters are displayed at the same time, for example the X- and Y-coordinate of a point, it is possible to enter one value and pick a point to define the other. Depending on the object additional constraints may be required to fully constrain it. Constraints resulting from On-View-Parameters take precedence over those that may result from <a href="../Sketcher_Dialog.html#Constraints" title="Sketcher Dialog">Auto constraints</a>.
 </p>
@@ -515,15 +513,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118144215
+Cached time: 20260118144333
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.426 seconds
-Real time usage: 0.517 seconds
-Preprocessor visited node count: 1413/1000000
-Post&#8208;expand include size: 34982/2097152 bytes
-Template argument size: 9789/2097152 bytes
+CPU time usage: 0.450 seconds
+Real time usage: 0.673 seconds
+Preprocessor visited node count: 1412/1000000
+Post&#8208;expand include size: 34966/2097152 bytes
+Template argument size: 9781/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -531,19 +529,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.317      1 -total
- 27.80%   12.321      1 Template:Sketcher_Tools_navi/cs
- 14.84%    6.577      2 Template:Navigation_menu_2
- 14.06%    6.233      1 Template:Userdocnavi/cs
-  9.03%    4.001      1 Template:PropertyView
-  6.52%    2.889     34 Template:Version
-  6.15%    2.727      8 Template:VersionPlus
-  5.50%    2.438      2 Template:Docnav
-  5.39%    2.389     14 Template:KEY
-  4.73%    2.096      6 Template:Caption
+100.00%   62.229      1 -total
+ 22.65%   14.097      1 Template:Sketcher_Tools_navi/cs
+ 15.17%    9.440      2 Template:Navigation_menu_2
+ 12.32%    7.665      1 Template:Userdocnavi/cs
+ 12.26%    7.628      1 Template:PropertyView
+  7.16%    4.457      2 Template:Docnav
+  6.93%    4.312      8 Template:VersionPlus
+  6.81%    4.236     14 Template:KEY
+  6.78%    4.222      1 Template:TOCright
+  6.65%    4.137      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118144214 and revision id 1740641. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118144332 and revision id 1740643. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
